Update wallpaper selection

--- a/wallpapers/AUTHORS
+++ b/wallpapers/AUTHORS
@@ -2,14 +2,14 @@ Included photos are public domain, by the following authors:
 
 - Anthony Cantin
 - Dlanor S
-- John Towner
-- Lance Asper
-- Luca Bravo
+- Fabio Santaniello Bruun
+- Leon Overweel
+- Lucas Benjamin
 - Maciek Krawiec
-- Nicki Eliza Schinow
-- Oliver Plattner
+- Mr Karl
 - Pathum Danthanarayana
 - Pierre Châtel-Innocenti
 - Rawpixel
 - Ryan Stone
 - Trevor Cole
+- Wexor Tmg
