Update wallpaper selection

--- a/wallpapers/AUTHORS
+++ b/wallpapers/AUTHORS
@@ -1,15 +1,13 @@
-Included photos are public domain, by the following authors:
+Included photos are work of the following authors:
 
-- Anthony Cantin
-- Dlanor S
-- Fabio Santaniello Bruun
-- Leon Overweel
-- Lucas Benjamin
-- Maciek Krawiec
-- Mr Karl
-- Pathum Danthanarayana
-- Pierre Châtel-Innocenti
-- Rawpixel
-- Ryan Stone
-- Trevor Cole
-- Wexor Tmg
+- Claudio Schwarz
+- Erik Škof
+- Ian Parker
+- Ivan Lopatin
+- Johannes Plenio
+- Jonny Gios
+- Karl Paul Baldacchino
+- Marek Piwnicki
+- Massimiliano Corradini
+- Patrick Hendry
+- Sumaid pal Singh Bakshi
